Refactor modules and move engine/webapi/task components